test_inputs/invalid/02_missing_decorator.mt
def missing_decorator(x): {
  y = x + 1;
}
